err/epyper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/epyper'...
Compiling './lib/python3.5/site-packages/epyper/bsp.py'...
***   File "./lib/python3.5/site-packages/epyper/bsp.py", line 81
    print "bsp_init: failed to initialize wiringPi"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/epyper/demo.py'...
***   File "./lib/python3.5/site-packages/epyper/demo.py", line 11
    print "Starting E-paper demo"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/epyper/displayController.py'...
***   File "./lib/python3.5/site-packages/epyper/displayController.py", line 30
    print "image has a wrong size, should be %s, is %s" % \
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/epyper/samples'...
Listing './lib/python3.5/site-packages/epyper-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wiringpi-2.44.4.egg-info'...
Listing './lib/python3.5/site-packages/wiringpi2-2.32.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
